tests/fixtures/invalid/sum_2_args.py
# sum() takes at most 1 argument, got 2
x = sum(1, 1)
